--- a/devenv/Dockerfile.api
+++ b/devenv/Dockerfile.api
@@ -4,7 +4,9 @@ ENV LANG en_US.UTF-8
 
 RUN go get github.com/codegangsta/gin
 
-ENV GOPATH /go
-WORKDIR /go/src/github.com/rackerlabs/GoCodingChallenge
 
-CMD ["gin", "-i", "run", "GoCodingChallenge"]
+ENV GOPATH /go
+WORKDIR /go/src/github.com/muly/todo-api
+
+
+CMD ["gin", "-i", "run", "todo-api"]
